Revision history for Perl module TestRail::API

0.032 2015-08-17 TEODESIAN
    - Add TestRail::API::typeNamesToIds
    - Add orphans option to testrail-tests, TestRail::Utils::Find::getTests
    - Add new TestRail::Utils::Find functions; getCases, findCases, synchronizeCases
    - Add new script bin/testrail-sync

0.031 2015-08-14 TEODESIAN
    - Update getCases to use testRail 4.0 filters, change filter args to HASHREF
    - Update TestRail::API::getCaseByName to take filter hashref too
    - Update getRunSummary and getPlanSummary to use 'labels' rather than system names
    - Add TestRail::API::statusNamesToLabels to ease interaction with above method updates
    - Change TestRail::API::translateConfigNamesToIds to accept ARRAY arguments
    - Make above function and TestRail::API::sectionNamesToIds return values in correct order
    - Change the 'spawn' option in Test::Rail::Parser (and it's callers) to be --testsuite_id
    - Add a --testsuite (name) option to Test::Rail::Parser
    - Spawning runs will now take run/plan completion status into account, spawning new runs/plans when completion is detected.
    - Removed the run_id option from Test::Rail::Parser and it's callers.  It isn't really useful in practice, and was not tested.

0.030 2015-07-31 TEODESIAN
    - Fix testrail-tests, was calling function in incorrect namespace
    - Fix testrail-bulk-mark-results, was not including library
    - Re-instate integration tests for binaries that were removed in 0.029
    - Require more up-to-date Pod::Perldoc for help that works on old unices/perls
    - Fix windows issue with TestRail::Find

0.029 2015-07-30 TEODESIAN
    - Add bulkAddResults function to TestRail::API
    - Add new script testrail-bulk-mark-results and it's backend TestRail::Utils::Results
    - Add new script testrail-lock and it's backend TestRail::Utils::Lock
    - Re-factor much of the bin/ scripts into TestRail::Utils