@@ -3,6 +3,7 @@ Revision history for Perl module TestRail::API
 0.032 2015-08-17 TEODESIAN
     - Add TestRail::API::typeNamesToIds
     - Add orphans option to testrail-tests, TestRail::Utils::Find::getTests
+    - Add TestRail::API::updateCase
     - Add new TestRail::Utils::Find functions; getCases, findCases, synchronizeCases
     - Add new script bin/testrail-sync
 
